# inspircd

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  changelog  configure  control  copyright  dirs  docker-build.sh  inspircd.examples  inspircd.postrm  inspircd.service  inspircd.tmpfile  rules  watch
SOURCES/: inspircd.service  inspircd.spec  rpmbuild.sh
cmake/: CheckCXXSourceRuns.cmake  FindLdap.cmake  FindLibGeoIP.cmake  FindMbedTLS.cmake  FindMySQL.cmake  FindRE2.cmake  inspircd.cmake  inspircd.template.cmake  run-cc.pl
debian/: apparmor-profile  changelog  control  inspircd-dev.install  inspircd.1  inspircd.examples  inspircd.init  inspircd.install  inspircd.lintian-overrides  inspircd.service  inspircd.tmpfile  rules  watch
debian/patches/: 01_dpkg-buildflags_support.diff  05_spelling_errors.diff  series
debian/tests/: control
docs/conf/: CMakeLists.txt  inspircd.conf.example  modules.conf.example  opers.conf.example
include/: base.h  builtinmodes.h  compat.h  config.h.cmake  configparser.h  configreader.h  ctables.h  dynamic.h  extensible.h  hash_map.h  hashcomp.h  inspircd.h  listmode.h  membership.h  mode.h  modules.h  numerics.h  parammode.h  snomasks.h  socketengine.h  stdalgo.h  typedefs.h  usermanager.h  users.h
include/modules/: cap.h  dns.h
m_python/: Makefile  Test.py  inspircd.i  inspircd_util.py  m_python.cpp
make/: configure.pm  utilities.pm
make/template/: main.mk
patches/: 01_spelling_error.diff  02_disable_rpath_for_extra_modules.diff  03_CVE-2012-1836.diff  03_gnutls_crypt_api_instead_gcrypt.diff  04_FTBFS_kfreebsd.diff  04_reproducible_builds.diff  05_FTBFS_gcc-4.7.diff  05_gnutls_crypt_api_instead_gcrypt.diff  05_posix-tmpnam.diff  06_FTBFS-hurd.diff  series
src/: CMakeLists.txt  channels.cpp  command_parse.cpp  commands.cpp  configparser.cpp  configreader.cpp  cull_list.cpp  dns.cpp  dynamic.cpp  hashcomp.cpp  helperfuncs.cpp  inspircd.cpp  inspsocket.cpp  listmode.cpp  mode.cpp  modmanager_dynamic.cpp  modmanager_static.cpp  modules.cpp  server.cpp  snomasks.cpp  socket.cpp  socketengine.cpp  stats.cpp  usermanager.cpp  users.cpp  xline.cpp
src/commands/: cmd_die.cpp  cmd_eline.cpp  cmd_gline.cpp  cmd_hostname_lookup.cpp  cmd_info.cpp  cmd_invite.cpp  cmd_ison.cpp  cmd_kick.cpp  cmd_kill.cpp  cmd_kline.cpp  cmd_list.cpp  cmd_loadmodule.cpp  cmd_motd.cpp  cmd_nick.cpp  cmd_notice.cpp  cmd_oper.cpp  cmd_privmsg.cpp  cmd_qline.cpp  cmd_rehash.cpp  cmd_reloadmodule.cpp  cmd_restart.cpp  cmd_stats.cpp  cmd_unloadmodule.cpp  cmd_user.cpp  cmd_who.cpp  cmd_whois.cpp  cmd_whowas.cpp  cmd_zline.cpp
src/coremods/: core_dns.cpp  core_hostname_lookup.cpp  core_privmsg.cpp  core_who.cpp
src/modes/: cmode_b.cpp  umode_o.cpp  umode_s.cpp
src/modules/: CMakeLists.txt  m_alias.cpp  m_auth.cpp  m_banredirect.cpp  m_blockamsg.cpp  m_callerid.cpp  m_cap.cpp  m_cban.cpp  m_cgiirc.cpp  m_chancreate.cpp  m_chghost.cpp  m_chgident.cpp  m_chgname.cpp  m_clearchan.cpp  m_cloaking.cpp  m_conn_join.cpp  m_conn_waitpong.cpp  m_connectban.cpp  m_connflood.cpp  m_customtitle.cpp  m_dccallow.cpp  m_delayjoin.cpp  m_delaymsg.cpp  m_dnsbl.cpp  m_filter.cpp  m_flashpolicyd.cpp  m_globalload.cpp  m_globops.cpp  m_ident.cpp  m_ldapauth.cpp  m_ldapoper.cpp  m_locale.cpp  m_lockserv.cpp  m_md5.cpp  m_mlock.cpp  m_nicklock.cpp  m_ojoin.cpp  m_operlevels.cpp  m_operlog.cpp  m_override.cpp  (+28 more)
src/modules/extra/: m_geoip.cpp  m_ldap.cpp  m_ldapauth.cpp  m_ldapoper.cpp  m_mysql.cpp  m_pgsql.cpp  m_regex_pcre.cpp  m_regex_re2.cpp  m_regex_tre.cpp  m_sqlite3.cpp  m_ssl_gnutls.cpp  m_ssl_mbedtls.cpp  m_ssl_openssl.cpp
src/modules/m_python/: Makefile  Test.py  inspircd.i  m_python.cpp  wrapper.cpp
src/modules/m_python_swig/: Makefile  inspircd.i  wrapper.cpp
src/modules/m_spanningtree/: addline.cpp  capab.cpp  delline.cpp  fjoin.cpp  fmode.cpp  hmac.cpp  idle.cpp  main.cpp  main.h  metadata.cpp  misccommands.cpp  netburst.cpp  opertype.cpp  override_squit.cpp  override_stats.cpp  pong.cpp  rconnect.cpp  resolvers.cpp  rsquit.cpp  server.cpp  treeserver.cpp  treesocket1.cpp  treesocket2.cpp  uid.cpp  utils.cpp
src/socketengines/: socketengine_epoll.cpp
test/: CMakeLists.txt  inspircd_test.h
test/core/: sepstream.cpp  testsuite.cpp  threads.cpp  uid.cpp  wild.cpp
test/modules/: stripcolor_test.cpp
tests/: client.pl  control  start.sh
win/: .gitignore  CMakeLists.txt  Toolchan-mingw.cmake  build.sh  configure.sh  inspircd_config.h.cmake  inspircd_memory_functions.cpp  inspircd_win32wrapper.cpp  inspircd_win32wrapper.h  mingw-toolchain.cmake  win32service.cpp
win/modules/: CMakeLists.txt
